added pager images

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="uk.co.darkruby.bbuddy.birthdaybuddy">
 
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
         android:allowBackup="true"
@@ -16,12 +16,14 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AddBuddyActivity" />
-        <activity android:name=".BuddyDetailsActivity"></activity>
+        <activity
+            android:name=".AddBuddyActivity" />
+        <activity
+            android:name=".BuddyDetailsActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
