--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,10 +19,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".AddBuddyActivity" />
+            android:name=".AddBuddyActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".BuddyDetailsActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
